--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,17 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MyApplication" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+<!--        Primary Brand Color-->
+         <item name="colorPrimary">@color/blue</item>
+         <item name="colorPrimaryVariant">@color/pink</item>
+         <item name="colorOnPrimary">@color/white</item>
+<!--        Secondary Brand Color-->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+<!--        Status Bar Color-->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
     </style>
 
     <style name="Theme.MyApplication" parent="Base.Theme.MyApplication" />
