--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,55 +7,277 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="380dp"
-        android:layout_height="30dp"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="49dp" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="380dp"
-        android:layout_height="260dp"
-        app:srcCompat="@drawable/banner1"
-        tools:layout_editor_absoluteX="15dp"
-        tools:layout_editor_absoluteY="79dp" />
-
     <ScrollView
-        android:layout_width="380dp"
-        android:layout_height="160dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="348dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/banner1" />
+                android:background="@drawable/top_background"
+                android:orientation="vertical"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp">
 
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/banner2" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/imageView6"
-                android:layout_width="wrap_content"
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="7dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginRight="20dp"
+                        app:srcCompat="@drawable/branding" />
+
+                    <AutoCompleteTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="47dp"
+                        android:layout_gravity="center"
+                        android:layout_marginRight="7dp"
+                        android:background="@drawable/border"
+                        android:drawableRight="@drawable/baseline_search_24"
+                        android:fontFamily="@font/adamina"
+                        android:hint="Search Here"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="12dp" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="7dp"
+                    android:drawableLeft="@drawable/baseline_location_on_24"
+                    android:paddingLeft="10dp"
+                    android:text="  Delivering to Your Location"
+                    android:textSize="15dp"
+                    tools:layout_editor_absoluteX="16dp"
+                    tools:layout_editor_absoluteY="49dp" />
+            </LinearLayout>
+
+            <HorizontalScrollView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/banner3" />
+                android:layout_margin="7dp"
+                android:scrollbars="none">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="5dp">
+
+                    <ImageButton
+                        android:id="@+id/b1"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/list_item_icon_border"
+                        android:src="@drawable/milk" />
+
+                    <ImageButton
+                        android:id="@+id/b2"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/list_item_icon_border"
+                        android:src="@drawable/milk" />
+
+                    <ImageButton
+                        android:id="@+id/b3"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/list_item_icon_border"
+                        android:src="@drawable/milk" />
+
+                    <ImageButton
+                        android:id="@+id/b4"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/list_item_icon_border"
+                        android:src="@drawable/milk" />
+
+                    <ImageButton
+                        android:id="@+id/b5"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/list_item_icon_border"
+                        android:src="@drawable/milk" />
+
+                    <ImageButton
+                        android:id="@+id/b6"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/list_item_icon_border"
+                        android:src="@drawable/milk" />
+
+                    <ImageButton
+                        android:id="@+id/b7"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/list_item_icon_border"
+                        android:src="@drawable/milk" />
+
+                    <ImageButton
+                        android:id="@+id/b8"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/list_item_icon_border"
+                        android:src="@drawable/milk" />
+
+                    <ImageButton
+                        android:id="@+id/b9"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/list_item_icon_border"
+                        android:src="@drawable/milk" />
+
+                    <ImageButton
+                        android:id="@+id/b10"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/list_item_icon_border"
+                        android:src="@drawable/milk" />
+
+                    <ImageButton
+                        android:id="@+id/b11"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/list_item_icon_border"
+                        android:src="@drawable/milk" />
+
+                </LinearLayout>
+            </HorizontalScrollView>
+
+            <ViewFlipper
+                android:layout_width="match_parent"
+                android:layout_height="500px"
+                android:layout_margin="7dp"
+                android:autoStart="true"
+                android:flipInterval="3500"
+                android:inAnimation="@android:anim/slide_in_left"
+                android:outAnimation="@android:anim/slide_out_right">
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/banner4" />
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/banner3" />
+
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/banner1" />
+
+                <ImageView
+                    android:id="@+id/imageView6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/banner2" />
+            </ViewFlipper>
+
+<!--            <ScrollView-->
+<!--                android:layout_width="380dp"-->
+<!--                android:layout_height="160dp"-->
+<!--                tools:layout_editor_absoluteX="16dp"-->
+<!--                tools:layout_editor_absoluteY="348dp">-->
+
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:orientation="horizontal">-->
+
+<!--                    <ImageView-->
+<!--                        android:id="@+id/imageView4"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_weight="1"-->
+<!--                        app:srcCompat="@drawable/banner1" />-->
+
+<!--                    <ImageView-->
+<!--                        android:id="@+id/imageView5"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_weight="1"-->
+<!--                        app:srcCompat="@drawable/banner2" />-->
+
+<!--                    <ImageView-->
+<!--                        android:id="@+id/imageView6"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_weight="1"-->
+<!--                        app:srcCompat="@drawable/banner3" />-->
+<!--                </LinearLayout>-->
+<!--            </ScrollView>-->
+
         </LinearLayout>
+
     </ScrollView>
+
+    <!--            <ImageView-->
+        <!--                android:id="@+id/imageView"-->
+        <!--                android:layout_width="477px"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_weight="1"-->
+        <!--                app:srcCompat="@drawable/branding" />-->
+        <!--        </LinearLayout>-->
+
+
+        <!--    <AutoCompleteTextView-->
+        <!--        android:layout_width="350dp"-->
+        <!--        android:layout_height="70dp"-->
+        <!--        android:layout_marginTop="44dp"-->
+        <!--        app:layout_constraintEnd_toEndOf="parent"-->
+        <!--        app:layout_constraintHorizontal_bias="0.491"-->
+        <!--        app:layout_constraintStart_toStartOf="parent"-->
+        <!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+
+
+        <!--    <ImageView-->
+        <!--        android:id="@+id/imageView"-->
+        <!--        android:layout_width="380dp"-->
+        <!--        android:layout_height="260dp"-->
+        <!--        app:srcCompat="@drawable/banner1"-->
+        <!--        tools:layout_editor_absoluteX="15dp"-->
+        <!--        tools:layout_editor_absoluteY="79dp" />-->
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
