--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -246,6 +246,133 @@
 <!--                        app:srcCompat="@drawable/banner3" />-->
 <!--                </LinearLayout>-->
 <!--            </ScrollView>-->
+\
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:background="@drawable/border"
+                    android:padding="10dp"
+                    android:layout_width="130dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="5dp"
+                    android:text="   FREE DELIVERY ON FIRST ORDER"
+                    android:textSize="10dp"
+                    android:drawableLeft="@drawable/baseline_delivery_dining_24"
+                    android:textStyle="bold" />
+                <TextView
+                    android:padding="10dp"
+                    android:background="@drawable/border"
+                    android:layout_width="130dp"
+                    android:layout_margin="5dp"
+                    android:layout_height="match_parent"
+                    android:text="PAY ON      DELIVERY"
+                    android:drawableLeft="@drawable/baseline_payment_24"
+                    android:textSize="10dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:padding="10dp"
+                    android:drawableLeft="@drawable/baseline_keyboard_return_24"
+                    android:background="@drawable/border"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="5dp"
+                    android:text="EASY RETURNS"
+                    android:textSize="10dp"
+                    android:textStyle="bold" />
+
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="7dp"
+                android:layout_margin="7dp"
+                android:text="Categories"
+                android:textSize="25dp"
+                android:textStyle="bold"/>
+
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_margin="4dp"
+                    android:padding="3dp">
+
+
+                    <ImageButton
+
+                        android:layout_width="190dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/item_selector_background"/>
+                    <ImageButton
+
+                        android:layout_width="190dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/item_selector_background"/>
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_margin="4dp"
+                    android:padding="3dp">
+
+
+                    <ImageButton
+
+                        android:layout_width="190dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/item_selector_background"/>
+                    <ImageButton
+
+                        android:layout_width="190dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/item_selector_background"/>
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_margin="4dp"
+                    android:padding="3dp">
+
+
+                    <ImageButton
+
+                        android:layout_width="190dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/item_selector_background"/>
+                    <ImageButton
+
+                        android:layout_width="190dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/item_selector_background"/>
+                </TableRow>
+
+                    <ImageButton
+
+                        android:layout_width="380dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/item_selector_background_2"/>
+
+            </TableLayout>
 
         </LinearLayout>
 
