--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
                         app:srcCompat="@drawable/branding" />
 
                     <AutoCompleteTextView
+                        android:id="@+id/search_bar"
                         android:layout_width="match_parent"
                         android:layout_height="47dp"
                         android:layout_gravity="center"
