--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -319,35 +319,13 @@
 
 
                     <ImageButton
-
+                        android:id="@+id/c1"
                         android:layout_width="190dp"
                         android:layout_height="80dp"
                         android:layout_margin="7dp"
                         android:background="@drawable/item_selector_background"/>
                     <ImageButton
-
-                        android:layout_width="190dp"
-                        android:layout_height="80dp"
-                        android:layout_margin="7dp"
-                        android:background="@drawable/item_selector_background"/>
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_margin="4dp"
-                    android:padding="3dp">
-
-
-                    <ImageButton
-
-                        android:layout_width="190dp"
-                        android:layout_height="80dp"
-                        android:layout_margin="7dp"
-                        android:background="@drawable/item_selector_background"/>
-                    <ImageButton
-
+                        android:id="@+id/c2"
                         android:layout_width="190dp"
                         android:layout_height="80dp"
                         android:layout_margin="7dp"
@@ -363,13 +341,35 @@
 
 
                     <ImageButton
-
+                        android:id="@+id/c3"
                         android:layout_width="190dp"
                         android:layout_height="80dp"
                         android:layout_margin="7dp"
                         android:background="@drawable/item_selector_background"/>
                     <ImageButton
+                        android:id="@+id/c4"
+                        android:layout_width="190dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/item_selector_background"/>
+                </TableRow>
 
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_margin="4dp"
+                    android:padding="3dp">
+
+
+                    <ImageButton
+                        android:id="@+id/c5"
+                        android:layout_width="190dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="7dp"
+                        android:background="@drawable/item_selector_background"/>
+                    <ImageButton
+                        android:id="@+id/c6"
                         android:layout_width="190dp"
                         android:layout_height="80dp"
                         android:layout_margin="7dp"
@@ -377,6 +377,7 @@
                 </TableRow>
 
                     <ImageButton
+                        android:id="@+id/c6"
 
                         android:layout_width="380dp"
                         android:layout_height="80dp"
