Added new item in Drawable

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,18 +49,33 @@
                         android:layout_marginRight="20dp"
                         app:srcCompat="@drawable/branding" />
 
-                    <AutoCompleteTextView
-                        android:id="@+id/search_bar"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="47dp"
-                        android:layout_gravity="center"
+                        android:layout_height="match_parent"
                         android:layout_marginRight="7dp"
-                        android:background="@drawable/border"
-                        android:drawableRight="@drawable/baseline_search_24"
-                        android:fontFamily="@font/adamina"
-                        android:hint="Search Here"
-                        android:paddingLeft="20dp"
-                        android:paddingRight="12dp" />
+                        android:background="@drawable/border">
+
+                        <AutoCompleteTextView
+                            android:id="@+id/search_bar"
+                            android:layout_width="196dp"
+                            android:layout_height="47dp"
+                            android:layout_gravity="center"
+                            android:layout_marginRight="7dp"
+                            android:background="@drawable/none"
+                            android:fontFamily="@font/adamina"
+                            android:hint="Search Here"
+                            android:paddingLeft="20dp"
+                            android:paddingRight="12dp" />
+
+                        <ImageButton
+
+                            android:id="@+id/search_btn"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/baseline_search_24"
+                            android:background="@drawable/none"/>
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
