--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -27,6 +27,7 @@
             android:paddingBottom="20dp">
 
             <LinearLayout
+                android:layout_margin="7dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -84,7 +85,17 @@
                 tools:layout_editor_absoluteY="49dp" />
         </LinearLayout>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="7dp"
+            android:layout_margin="7dp"
+            android:text="Category"
+            android:textSize="25dp"
+            android:textStyle="bold"/>
+
         <ListView
+            android:layout_margin="7dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
